--- a/styles1.css
+++ b/styles1.css
@@ -10,14 +10,16 @@ body {
     flex-direction: column;
 }
 
-.sidebar {
-    width: 230px;
+.navbar {
+    width: 100%;
     background-color: #121212;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     padding: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-direction: column;
+    position: fixed;
 }
 
 .logo {
@@ -40,11 +42,13 @@ body {
     flex-grow: 1;
     padding-left: 20px;
     width: 230px;
+    margin-top: 70px;
 }
 
 .sidebar-content.expanded {
     opacity: 1;
     visibility: visible;
+    margin-top: 70px;
 }
 
 .part {
